Тесты для RoundRobinTaskProcessor